--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "react-c3js": "^0.1.19",
     "react-scripts": "1.0.7"
   },
   "scripts": {
